# writespace-blog-platform-mvp-TD9c-xMWSCm1

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  README.md  vercel.json
api/: main.rs
migrations/: 001_initial.sql
public/: admin.html  blog.html  blogs.html  index.html  login.html  register.html  users.html  write.html
public/js/: app.js
src/: config.rs  db.rs  errors.rs  lib.rs  models.rs
src/handlers/: admin.rs  auth.rs  mod.rs  posts.rs
src/middleware/: auth.rs  mod.rs
tests/: handlers_test.rs
